@@ -35,43 +35,9 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include "gripes.h"
 #include "oct-map.h"
 #include "ov-base.h"
-#include "ov-base-mat.h"
-#include "ov-base-mat.cc"
 #include "ov-fcn-handle.h"
 #include "pr-output.h"
 #include "variables.h"
-
-// Instantiate Arrays of fcn_handle_elt values.
-
-#include "Array.h"
-#include "Array.cc"
-
-INSTANTIATE_ARRAY_AND_ASSIGN (fcn_handle_elt);
-
-#include "Array2.h"
-
-template class Array2<fcn_handle_elt>;
-
-#include "ArrayN.h"
-#include "ArrayN.cc"
-
-template class ArrayN<fcn_handle_elt>;
-
-template class octave_base_matrix<fcn_handle_array>;
-
-boolNDArray
-fcn_handle_array::all (int) const
-{
-  error ("all: invalid call for function handle object");
-  return boolNDArray ();
-}
-
-boolNDArray
-fcn_handle_array::any (int) const
-{
-  error ("any: invalid call for function handle object");
-  return boolNDArray ();
-}
 
 DEFINE_OCTAVE_ALLOCATOR (octave_fcn_handle);
 
@@ -118,69 +84,6 @@ octave_fcn_handle::subsref (const std::string& type,
   return retval;
 }
 
-octave_function *
-octave_fcn_handle::function_value (bool)
-{
-  octave_function *retval = 0;
-
-  if (numel () > 0)
-    {
-      // XXX FIXME XXX -- is warn_fortran_indexing the right variable here?
-      if (Vwarn_fortran_indexing)
-	gripe_implicit_conversion ("function handle array",
-				   "scalar function handle");
-
-      fcn_handle_elt elt = matrix(0);
-
-      retval = elt.function_value ();
-    }
-  else
-    gripe_invalid_conversion ("function handle array",
-			      "scalar function handle");
-
-  return retval;
-}
-
-std::string
-octave_fcn_handle::name (void) const
-{
-  std::string retval;
-
-  if (numel () > 0)
-    {
-      // XXX FIXME XXX -- is warn_fortran_indexing the right variable here?
-      if (Vwarn_fortran_indexing)
-	gripe_implicit_conversion ("function handle array",
-				   "scalar function handle");
-
-      fcn_handle_elt elt = matrix(0);
-
-      retval = elt.name ();
-    }
-  else
-    gripe_invalid_conversion ("function handle array",
-			      "scalar function handle");
-
-  return retval;
-}
-
-ArrayN<std::string>
-fcn_handle_array::names (void) const
-{
-  ArrayN<std::string> retval (dims ());
-
-  int nel = length ();
-
-  for (int i = 0; i < nel; i++)
-    {
-      fcn_handle_elt elt = elem (i);
-
-      retval(i) = elt.name ();
-    }
-
-  return retval;
-}
-
 void
 octave_fcn_handle::print (std::ostream& os, bool pr_as_read_syntax) const
 {
@@ -191,7 +94,7 @@ octave_fcn_handle::print (std::ostream& os, bool pr_as_read_syntax) const
 void
 octave_fcn_handle::print_raw (std::ostream& os, bool pr_as_read_syntax) const
 {
-  octave_print_internal (os, name_array (), pr_as_read_syntax,
+  octave_print_internal (os, nm, pr_as_read_syntax,
 			 current_print_indent_level ());
 }
 
@@ -203,7 +106,7 @@ make_fcn_handle (const std::string& nm)
   octave_function *f = lookup_function (nm);
 
   if (f)
-    return fcn_handle_array (f, nm);
+    retval = octave_value (f, nm);
   else
     error ("error creating function handle \"@%s\"", nm.c_str ());
 
